# CampusWatt

./: .gitignore  .vercelignore  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
model_statistics/: bootstrap_confidence_intervals.csv  impossibility_test_results.csv  model_summary.csv  nemenyi_matrix.csv  wilcoxon_bonferroni_results.csv
models/: ridge_model.pkl
models/causal_models/: causal_coefficients.csv  causal_distribution.pkl
notebooks/: 0002_CampusWatt_Causal_Modelling.ipynb  CampusWatt_Causal_Modelling.ipynb  CampusWatt_ModelExperiments.ipynb  CampusWatt_Test_Submission.ipynb
slm_utils/: reccomend.py
src/: Dockerfile  _redirects  about.html  index.html  login.html  post.html  posts.html  predictions.html  profile.html  search.html  signup.html
src/shared/: about.js  api.js  app.js  index.js  login.js  post.js  posts.js  predictions.js  profile.js  signup.js  styles.css
test_submission/: test_script.py
utils/: Dockerfile  api_utils.py  causal_utils.py  data_utils.py  db_utils.py  input_utils.py  logging_utils.py  mock_db.json
utils/slm_utils/: reccomend.py
utils/slm_utils/knowledge_base/: building_energy_knowledge.json
utils/slm_utils/rag/: corrective_rag.py  retriever.py
