[project]
name = "campuswatt"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "faiss-cpu==1.11.0",
    "fastapi==0.139.0",
    "joblib==1.5.0",
    "numpy==2.5.1",
    "pandas==2.3.1",
    "psycopg[binary]==3.3.4",
    "pydantic==1.10.14",
    "PyJWT==2.13.0",
    "python-dotenv==1.2.2",
    "scikit-learn==1.9.0",
    "scipy==1.16.0",
    "sentence-transformers==4.1.0",
    "transformers==4.57.1",
    "wandb==0.28.0",
    "Werkzeug==3.1.3"
]



[tool.vercel]
entrypoint = "utils.api_utils:app"
