[project]
name = "campuswatt"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

dependencies = [
    "faiss-cpu==1.11.0",
    "fastapi==0.129.0",
    "uvicorn==0.34.1",
    "joblib==1.5.0",
    "numpy==2.2.6",
    "pandas==2.3.1",
    "psycopg[binary]==3.3.4",
    "psycopg-pool==3.2.7",
    "pydantic==2.12.5",
    "PyJWT==2.11.0",
    "python-dotenv==1.1.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.0",
    "sentence-transformers==4.1.0",
    "transformers==4.57.1",
    "wandb==0.28.0",
    "Werkzeug==3.1.3",
    "xgboost==3.0.5",
    "lightgbm==4.6.0",
    "catboost==1.2.8"
]



[tool.vercel]
entrypoint = "utils.api_utils:app"
